update fatcat-api with openapi change
